# shotgun-demand-forecasting

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: __init__.py  settings.yaml
data/raw/: dlx_shotgun_datadump_firearms_2019.csv  dlx_shotgun_datadump_firearms_2020.csv  dlx_shotgun_datadump_firearms_2021.csv  dlx_shotgun_datadump_firearms_2022.csv  dlx_shotgun_datadump_firearms_2023.csv
deliverables/presentation/: slides.md
deliverables/proposal/: proposal.md
notebooks/: 01_data_exploration.ipynb  02_pyspark_pipeline.ipynb  03_feature_engineering.ipynb  04_model_training.ipynb  05_evaluation_analysis.ipynb
src/data/: data_splitter.py  spark_pipeline.py
src/evaluation/: metrics.py  statistical_tests.py
src/features/: engineering.py
src/models/: baselines.py  lightgbm_model.py  xgboost_model.py
src/visualization/: plots.py
tests/: conftest.py  test_baselines.py  test_data_splitter.py  test_feature_engineering.py  test_lightgbm_model.py  test_metrics.py  test_plots.py  test_spark_pipeline.py  test_statistical_tests.py  test_xgboost_model.py
